# Tracetap

./: .dockerignore  .gitignore  ANNOUNCEMENT.md  CERTIFICATE_INSTALLATION.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_RECORDING_SETUP.md  DEMO_SCRIPT.md  DOCUMENTATION_SUMMARY.md  Dockerfile  GENERATE_TESTS_CLI.md  HIGH_PRIORITY_FIXES.md  LICENSE  PROGRESS_FEATURE_SUMMARY.md  PROGRESS_INDEX.md  PROGRESS_INDICATORS.md  PROGRESS_QUICK_REFERENCE.md  README.md  README_VERIFICATION.md  RECORD_CLI_USAGE.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  REPLAY.md  TASK_22_COMPLETION.md  TASK_28_COMPLETION.md  TASK_37_SUMMARY.md  TASK_41_SUMMARY.md  TASK_MANAGEMENT.md  TEST_REPORT.md  TEST_STATUS.md  TRACETAP_COMPLETE_GUIDE.md  TRACETAP_V2.2_COMPLETION.md  TRANSFORMATION_COMPLETE.md  WIREMOCK_IGNORE_CONFIG.md  WIREMOCK_WORKFLOW.md  build_executables.py  build_wiremock.py  chrome-cert-manager.sh  demo_progress.py  docker-compose.yml  (+26 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  contract-testing.yml  release.yaml
.omc/: continuation-count.json  task-35-completion-summary.md  task-35-verification.md  task-37-completion.md  ultrawork-state.json
.omc/notepads/qa-transformation/: learnings.md
.omc/plans/: killer-feature-ui-recorder.md
Formula/: README.md  tracetap.rb
docker/: README.md
docs/: CERTIFICATE_INSTALLATION.md  CLI_UX_GUIDE.md  CONTRIBUTING.md  PLATFORM_COMPARISON.md  README.md  TROUBLESHOOTING.md  WIREMOCK_IGNORE_CONFIG.md  WIREMOCK_WORKFLOW.md  build.md  examples.md  getting-started.md  recording-guide.md  test-generator-usage.md  troubleshooting.md
docs/api/: cli-reference.md  python-api.md
docs/features/: ai-test-suggestions.md  contract-testing.md  regression-testing.md
docs/getting-started/: UI_RECORDING.md
docs/guides/: capturing-traffic.md  ci-cd-integration.md  contract-verification.md  generating-tests.md
docs/launch/: CLAUDE.md  LAUNCH_GUIDE.md  README.md  devto-blog.md  hackernews-submission.md  linkedin-post.md  reddit-post.md  twitter-thread.md
docs/video/: README.md  demo-script.md  shooting-guide.md
docs/workflows/: ci-cd-integration.md  contract-first.md  local-development.md  playwright-integration.md
examples/: recording_session_example.py
examples/contract-testing/: README.md
examples/ecommerce-api/: CLAUDE.md  README.md
examples/ecommerce-api/captured-traffic/: checkout-flow.json
examples/ecommerce-api/contracts/: ecommerce-api.yaml
examples/ecommerce-api/generated-tests/: regression.spec.ts
examples/ecommerce-api/sample-api/: server.py
examples/ecommerce-api/scripts/: capture.sh  demo-workflow.sh  generate-tests.sh  run-mock.sh
examples/regression-suite/: README.md
examples/regression-suite/captured-traffic/: crud-operations.json
examples/regression-suite/ci-cd/: github-actions.yml
examples/regression-suite/generated-tests/: api-regression.spec.ts  package.json  playwright.config.ts
examples/regression-suite/scripts/: run-tests.sh
examples/ui-recording-demo/: INDEX.md  QUICK_START.md  README.md  TASK_47_COMPLETION.md
examples/ui-recording-demo/auth/: README.md  package.json
examples/ui-recording-demo/ecommerce/: README.md  package.json
examples/ui-recording-demo/todomvc/: README.md  package.json  playwright.config.ts
npm/: README.md  package.json
npm/scripts/: install.js  test.js  wrapper.js
playwright-tests/: my-api-collection.spec.ts
scripts/: README.md  record-demos.sh
scripts/demo-scenarios/: ai-suggestions.sh  contract.sh  quickstart.sh  regression.sh  report.sh
spike/: RESULTS.md  SPIKE_PLAN.md
spike/poc/: README.md  end-to-end-test.ts  event-correlator.ts  package.json  test-correlator.ts  test-trace-parser.ts  trace-parser.ts  trace-recorder.ts
spike/research/: playwright-mcp-analysis.md
src/tracetap/: CLAUDE.md  __init__.py  cert_installer.py
src/tracetap/ai/: CLAUDE.md  __init__.py  pattern_analyzer.py  test_suggester.py
src/tracetap/capture/: CLAUDE.md  QUICK_REFERENCE.txt  README.md  config_examples.txt  exporters.py  filters.py  test_modules.py  tracetap_addon.py  tracetap_main.py  utils.py
src/tracetap/cli/: CLAUDE.md  __init__.py  cmd_doctor.py  cmd_generate.py  cmd_proxy.py  cmd_record.py  generate_tests.py  main.py  quickstart.py  record.py
src/tracetap/common/: CLAUDE.md  __init__.py  ai_utils.py  analytics.py  constants.py  errors.py  output.py  progress.py  url_utils.py  utils.py
src/tracetap/contract/: CLAUDE.md  __init__.py  contract_creator.py  contract_verifier.py
src/tracetap/generators/: CLAUDE.md  __init__.py  assertion_builder.py  file_organizer.py  performance_analyzer.py  pii_sanitizer.py  regression_generator.py  test_from_recording.py  variation_generator.py
src/tracetap/mock/: CLAUDE.md  __init__.py  generator.py  matcher.py  server.py
src/tracetap/playwright/: CLAUDE.md  __init__.py  fixture_generator.py  playwright_generator.py  postman_parser.py  (+3 more)
templates/: EXAMPLES.md  README.md  basic.txt  comprehensive.txt  regression.txt
test-results/: PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  VALIDATION_REPORT.md  run_validation_test.py
tests/: CLAUDE.md  README.md  __init__.py  test_assertion_builder.py  test_cert_installer.py  test_cli_output.py  test_codegen_parser.py  test_contract_creator.py  test_contract_verifier.py  test_exporters.py  test_file_organizer.py  test_filters.py  test_generator.py  test_matcher.py  test_mock_server.py  test_pattern_analyzer.py  test_performance_analyzer.py  test_pii_sanitizer.py  test_pipeline_e2e.py  test_regression_generator.py  test_replay_config.py  test_replayer.py  test_test_generator.py  test_test_suggester.py  test_utils.py  test_variables.py  test_variation_generator.py
tests/fixtures/: baseline-contract.yaml  current-contract.yaml  production-traffic.json  sample-traffic.json  test_updated_collection.json
tests/integration/: COMPLETION_REPORT.md  QUICK_START.md  README.md  TEST_SUMMARY.md  __init__.py  manual_cli_test.sh  test_ui_recording_workflow.py  test_v2_1_features.py
(+42 files in other folders)
