[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracetap"
version = "2.0.0"
authors = [
    {name = "Vassilis Soumakis"}
]
description = "Record manual browser tests, capture API traffic, generate Playwright test code with AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["testing", "playwright", "qa", "automation", "browser", "recording", "ai"]

dependencies = [
    "mitmproxy>=10.0.0",
    "anthropic>=0.40.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/VassilisSoum/tracetap"
Repository = "https://github.com/VassilisSoum/tracetap"
"Bug Tracker" = "https://github.com/VassilisSoum/tracetap/issues"

[project.scripts]
tracetap = "tracetap.cli.main:cli"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
tracetap = ["generators/templates/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--tb=short",
]
